# sqlitedeploy

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod
.github/workflows/: ci.yml  release.yml
cmd/sqlitedeploy/: main.go
examples/blog/: Dockerfile  entry.sh  fly.toml  package-lock.json  package.json
examples/blog/src/: db.ts  index.ts
examples/cloudflare-workers-readonly/: README.md  package.json  tsconfig.json  wrangler.toml
examples/cloudflare-workers-readonly/src/: worker.ts
internal/auth/: bootstrap.go  jwt.go  keys.go
internal/browser/: open.go
internal/cli/: attach.go  auth.go  bootstrap.go  common.go  destroy.go  dev.go  down.go  init.go  restore.go  run.go  status.go  up.go
internal/cloudflare/: accounts.go  buckets.go  client.go  permission_groups.go  tokens.go
internal/config/: config.go
internal/credentials/: credentials.go
internal/ingress/: ingress.go  listen.go  quick.go
internal/litestream/: config.go  embed.go  embed_darwin_amd64.go  embed_darwin_arm64.go  embed_linux_amd64.go  embed_linux_arm64.go  embed_unsupported.go  embed_windows_amd64.go  embed_windows_arm64.go  runner.go
internal/providers/: azure.go  b2.go  config.go  provider.go  r2.go  s3.go
internal/sqld/: embed.go  embed_darwin_amd64.go  embed_darwin_arm64.go  embed_linux_amd64.go  embed_linux_arm64.go  embed_unsupported.go  env.go  runner.go
internal/sqlitex/: init.go
internal/tunnel/: download.go  manifest.go  quick.go
packaging/: .gitignore
packaging/maven/: README.md  pom.xml
packaging/maven/launcher/: pom.xml
packaging/pip/: README.md  hatch_build.py  pyproject.toml
packaging/pip/src/sqlitedeploy/: __init__.py  __main__.py  _resolve.py
scripts/: fetch-litestream.ps1  stamp-versions-maven.js  stamp-versions.js  stamp-versions.py
test/: README.md  run-all.sh
test/e2e-sqld/: README.md  docker-compose.yml  run.sh
test/integration/: test-go.sh  test-maven.sh  test-npm.sh  test-pip.sh
test/lib/: platform.sh
(+7 files in other folders)
